--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>8.0.28</version>
     </dependency>
     <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>5.3.23</version>
@@ -48,13 +53,27 @@
       <artifactId>mybatis-spring</artifactId>
       <version>3.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.24</version>
     </dependency>
   </dependencies>
+
   <build>
     <finalName>BIbleGuide</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <release>1.8</release>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
